--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "type": "module",
   "devDependencies": {
     "@types/express": "^5.0.1",
+    "prisma": "^6.7.0",
     "tsx": "^4.19.3"
   },
   "dependencies": {
@@ -9,6 +10,7 @@
     "@graphql-tools/load-files": "^7.0.1",
     "@graphql-tools/merge": "^9.0.24",
     "@graphql-tools/schema": "^10.0.23",
+    "@prisma/client": "^6.7.0",
     "@types/cors": "^2.8.17",
     "cors": "^2.8.5",
     "express": "^5.1.0",
@@ -16,6 +18,7 @@
     "graphql-tools": "^9.0.18"
   },
   "scripts": {
-    "dev": "tsx --watch client.ts"
+    "dev": "tsx --watch client.ts",
+    "server": "tsx --watch prisma/index.ts"
   }
 }
