--- a/Back/package.json
+++ b/Back/package.json
@@ -2,6 +2,7 @@
   "type": "module",
   "devDependencies": {
     "@types/express": "^5.0.1",
+    "@types/jsonwebtoken": "^9.0.9",
     "prisma": "^6.7.0",
     "tsx": "^4.19.3"
   },
