--- a/Back/package.json
+++ b/Back/package.json
@@ -7,7 +7,8 @@
     "tsx": "^4.19.3"
   },
   "dependencies": {
-    "@apollo/server": "^4.12.0",
+    "@apollo/server": "^4.12.1",
+    "@apollo/server-plugin-landing-page-graphql-playground": "^4.0.1",
     "@graphql-tools/load-files": "^7.0.1",
     "@graphql-tools/merge": "^9.0.24",
     "@graphql-tools/schema": "^10.0.23",
@@ -21,6 +22,7 @@
   },
   "scripts": {
     "dev": "tsx --watch client.ts",
-    "server": "tsx --watch prisma/index.ts"
+    "server": "tsx --watch prisma/index.ts",
+    "mid": "tsx --watch controller/Middleware/Middleware2.ts"
   }
 }
