--- a/Back/package.json
+++ b/Back/package.json
@@ -3,8 +3,12 @@
   "devDependencies": {
     "@types/express": "^5.0.1",
     "@types/jsonwebtoken": "^9.0.9",
+    "@types/node": "^22.15.21",
+    "esbuild": "^0.25.4",
     "prisma": "^6.7.0",
-    "tsx": "^4.19.3"
+    "ts-node": "^10.9.2",
+    "tsx": "^4.19.3",
+    "typescript": "^5.8.3"
   },
   "dependencies": {
     "@apollo/server": "^4.12.1",
@@ -18,11 +22,15 @@
     "express": "^5.1.0",
     "graphql": "^16.11.0",
     "graphql-tools": "^9.0.18",
-    "jsonwebtoken": "^9.0.2"
+    "jsonwebtoken": "^9.0.2",
+    "tsc": "^2.0.4"
   },
   "scripts": {
     "dev": "tsx --watch client.ts",
     "server": "tsx --watch prisma/index.ts",
-    "mid": "tsx --watch controller/Middleware/Middleware2.ts"
+    "mid": "tsx --watch controller/Middleware/Middleware2.ts",
+    
+    "build": "node build.mjs",
+    "start": "node dist/index.js"
   }
 }
