--- a/Back/package.json
+++ b/Back/package.json
@@ -23,6 +23,10 @@
   "scripts": {
     "dev": "tsx --watch client.ts",
     "server": "tsx --watch prisma/index.ts",
-    "mid": "tsx --watch controller/Middleware/Middleware2.ts"
+    "mid": "tsx --watch controller/Middleware/Middleware2.ts",
+
+    "build": "node build.mjs",
+    "start": "node dist/index.js"
+
   }
 }
