--- a/Back/package.json
+++ b/Back/package.json
@@ -30,7 +30,7 @@
     "server": "tsx --watch prisma/index.ts",
     "mid": "tsx --watch controller/Middleware/Middleware2.ts",
     
-    "build": "node build.mjs",
+    "build": "tsc",
     "start": "node dist/index.js"
 
   }
